--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Web コンテンツ作成</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <h1>「Webコンテンツ作成」の成果</h1>
+    <h2>本テーマの学習目的</h2>
+    <p>ここには学習目標を記録してください. シラバスや講義資料から読み取りましょう.（100文字）</p>
+    <h2>プロジェクト課題について</h2>
+    <p>プロジェクト課題では. . . を実施する. ここで表示するデータは...（200文字以上）</p>
+    <h2>数当てゲーム</h2>
+    <p>この課題では. . . を実施する. . . （この課題は第3回から第5回に取り組みます. 200文字以上）</p>
+    <h2>毎回の実験で作成したページ</h2>
+    <h3>第1回 WWW HTML</h3>
+    <p>今回はWebコンテンツの作成のためのHTMLの文書や要素について学びました. また次の課題に取り組みました. 演習1-3ではHTMLの文書の作成の仕方を学び、演習1-4ではさまざまな要素を学び、Webコンテンツの作成をしました. Webページの構造を記述するための要素（p.strong.br.h.ul.liなど）や構成のための必要な文を理解する事ができた.（100文字以上）</p>
+    <p>演習の成果</p>
+    <ul>
+      <li><a href="file:///Users/inomataakiranin/Documents/medialabo/practice-html/structure.html" target="_brank">演習1-3のHTMLファイル</a></li>
+      <li><a href="file:///Users/inomataakiranin/Documents/medialabo/practice-html/elements.html" target="_brank">演習1-4のHTMLファイル</a></li>
+    </ul>
+    <h3>第2回 CSS による Web ページの装飾</h3>
+    <h3>第3回 JavaScript の基本</h3>
+    <h3>第4回 DOM と JavaScript</h3>
+    <h3>第5回 イベント処理</h3>
   </body>
 </html>
