--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <p>今回はWebコンテンツの作成のためのHTMLの文書や要素について学びました. また次の課題に取り組みました. 演習1-3ではHTMLの文書の作成の仕方を学び、演習1-4ではさまざまな要素を学び、Webコンテンツの作成をしました. Webページの構造を記述するための要素（p.strong.br.h.ul.liなど）や構成のための必要な文を理解する事ができた.（100文字以上）</p>
     <p>演習の成果</p>
     <ul>
-      <li><a href="file:///Users/inomataakiranin/Documents/medialabo/practice-html/structure.html" target="_brank">演習1-3のHTMLファイル</a></li>
-      <li><a href="file:///Users/inomataakiranin/Documents/medialabo/practice-html/elements.html" target="_brank">演習1-4のHTMLファイル</a></li>
+      <li><a href="practice-html/structure.html" target="_brank">演習1-3のHTMLファイル</a></li>
+      <li><a href="practice-html/elements.html" target="_brank">演習1-4のHTMLファイル</a></li>
     </ul>
     <h3>第2回 CSS による Web ページの装飾</h3>
     <h3>第3回 JavaScript の基本</h3>
