--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <ul>
       <li><a href="practice-html/structure.html" target="_brank">演習1-3のHTMLファイル</a></li>
       <li><a href="practice-html/elements.html" target="_brank">演習1-4のHTMLファイル</a></li>
+      <li><a href="practice-css/browser-intro.html" target="_brank">練習問題2-3のCSS</a></li>
     </ul>
     <h3>第2回 CSS による Web ページの装飾</h3>
+    <p>今回はCSSについて学びました。CSS（Cascading Style Sheets）とは、 Webサイトのサイズや色、レイアウトなどを設定 するためのプログラミング言語であり、CSSは「シーエスエス」や「スタイルシート」などと呼ばれており、背景の色の変更や画像の設置、文字のフォントや色などの幅広いデザインを定義する際に使用されている。CSSを利用してページを見やすく作成した。（100文字以上）</p>
     <h3>第3回 JavaScript の基本</h3>
     <h3>第4回 DOM と JavaScript</h3>
     <h3>第5回 イベント処理</h3>
