課題の提出

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h3>第2回 CSS による Web ページの装飾</h3>
     <p>演習の成果</p>
     <ul>
-      li><a href="practice-css/browser-intro.html" target="_brank">練習問題2-3のCSS</a></li>
+      <li><a href="practice-css/browser-intro.html" target="_brank">練習問題2-3のCSS</a></li>
     </ul>
     <p>今回はCSSについて学びました。CSS（Cascading Style Sheets）とは、 Webサイトのサイズや色、レイアウトなどを設定 するためのプログラミング言語であり、CSSは「シーエスエス」や「スタイルシート」などと呼ばれており、背景の色の変更や画像の設置、文字のフォントや色などの幅広いデザインを定義する際に使用されている。CSSを利用してページを見やすく作成した。（100文字以上）</p>
     <h3>第3回 JavaScript の基本</h3>
