--- a/practice-dom/dom-intro.html
+++ b/practice-dom/dom-intro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>DOMを操作するJSプログラム</title>
-	<script scr="dom-intro.js" defer></script>
+	<script src="dom-intro.js" defer></script>
   </head>
 
   <body>
