--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h2>プロジェクト課題について</h2>
     <p>プロジェクト課題では. . . を実施する. ここで表示するデータは...（200文字以上）</p>
     <h2>数当てゲーム</h2>
-    <p>この課題では. . . を実施する. . . （この課題は第3回から第5回に取り組みます. 200文字以上）</p>
+    <p></p>
+    <li><a href = "kazuate.html">数当てゲーム</a></li>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第1回 WWW HTML</h3>
     <p>今回はWebコンテンツの作成のためのHTMLの文書や要素について学びました. また次の課題に取り組みました. 演習1-3ではHTMLの文書の作成の仕方を学び、演習1-4ではさまざまな要素を学び、Webコンテンツの作成をしました. Webページの構造を記述するための要素（p.strong.br.h.ul.liなど）や構成のための必要な文を理解する事ができた.（100文字以上）</p>
@@ -28,6 +29,8 @@
       <li><a href="practice-css/browser-intro.html" target="_brank">演習2-3のHTMLファイル</a></li>
     </ul>
     <h3>第3回 JavaScript の基本</h3>
+    <p></p>
+    <li><a href ="practice-js/obj-practice.html">練習3-6:オブジェクトの参照</a></li>
     <h3>第4回 DOM と JavaScript</h3>
     <h3>第5回 イベント処理</h3>
   </body>
