--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
     <li><a href = "kazuate.html">数当てゲーム</a></li>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第1回 WWW HTML</h3>
-    <p>今回はWebコンテンツの作成のためのHTMLの文書や要素について学びました. また次の課題に取り組みました. 演習1-3ではHTMLの文書の作成の仕方を学び、演習1-4ではさまざまな要素を学び、Webコンテンツの作成をしました. Webページの構造を記述するための要素（p.strong.br.h.ul.liなど）や構成のための必要な文を理解する事ができた.（100文字以上）</p>
+    <p>今回はWebコンテンツの作成のためのHTMLの文書や要素について学びました. また次の課題に取り組みました. 演習1-3ではHTMLの文書の作成の仕方を学び、演習1-4ではさまざまな要素を学び、Webコンテンツの作成をしました. Webページの構造を記述するための要素（p.strong.br.h.ul.liなど）や構成のための必要な文を理解する事ができた.</p>
     <p>演習の成果</p>
     <ul>
       <li><a href="practice-html/structure.html" target="_brank">演習1-3のHTMLファイル</a></li>
       <li><a href="practice-html/elements.html" target="_brank">演習1-4のHTMLファイル</a></li>
     </ul>
     <h3>第2回 CSS による Web ページの装飾</h3>
-    <p>今回はCSSについて学びました。CSS（Cascading Style Sheets）とは、 Webサイトのサイズや色、レイアウトなどを設定 するためのプログラミング言語であり、CSSは「シーエスエス」や「スタイルシート」などと呼ばれており、背景の色の変更や画像の設置、文字のフォントや色などの幅広いデザインを定義する際に使用されている。CSSを利用してページを見やすく作成した。（100文字以上）</p>
+    <p>今回はCSSについて学びました。CSS（Cascading Style Sheets）とは、 Webサイトのサイズや色、レイアウトなどを設定 するためのプログラミング言語であり、CSSは「シーエスエス」や「スタイルシート」などと呼ばれており、背景の色の変更や画像の設置、文字のフォントや色などの幅広いデザインを定義する際に使用されている。CSSを利用してページを見やすく作成した。</p>
     <p>演習の成果</p>
     <ul>
       <li><a href="practice-css/browser-intro.html" target="_brank">演習2-3のHTMLファイル</a></li>
     </ul>
     <h3>第3回 JavaScript の基本</h3>
-    <p></p>
+    <p>今回はJavaScriptについて学びました。JavaとJavaScriptの違いやJavaSqriptを使って、宣言や代入、繰り返しを行い、数当てゲームを作成した。javaの宣言と少し違っており、プログラム作成が大変でした。メソッドやオブジェクト参照やエラーが詳しく理解する事ができ、とても便利でした。この日は熱が出てしまい、欠席してしまったがしっかりと理解できてよかった。</p>
     <li><a href ="practice-js/obj-practice.html">練習3-6:オブジェクトの参照</a></li>
     <h3>第4回 DOM と JavaScript</h3>
     <h3>第5回 イベント処理</h3>
