Webコンテンツの作成

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <li><a href ="practice-js/obj-practice.html">練習3-6:オブジェクトの参照</a></li>
     </ul>
     <h3>第4回 DOM と JavaScript</h3>
+    <p>今回はDOMとJavaScriptについて学びました。DOMはイベント処理と組み合わせて使用することが多いです。DOMとイベント処理を組み合わせると次のようなページを作れます。DOMはイベント処理と組み合わせてDOMを使用することでDOMの実用性が実感できる。DOMを使ったプログラムを作るのは難しいです。プログラムエラーの原因は、JavaScriptプログラムだけではなくHTMLの場合もあります。</p>
+    <ul>
+      <li><a href ="practice-dom/dom-exercise.html">練習4-2から4-5:DOM プログラミング演習</a></li>
+    </ul>
     <h3>第5回 イベント処理</h3>
   </body>
 </html>
