--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h2>本テーマの学習目的</h2>
     <p>ここには学習目標を記録してください. シラバスや講義資料から読み取りましょう.（100文字）</p>
     <h2>プロジェクト課題について</h2>
-    <p>プロジェクト課題では. . . を実施する. ここで表示するデータは...（200文字以上）</p>
+    <p></p>
+    <li><a href="project.html">プロジェクト課題</a></li>
     <h2>数当てゲーム</h2>
     <p></p>
     <li><a href = "kazuate.html">数当てゲーム</a></li>
