--- a/project.html
+++ b/project.html
@@ -2,13 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>世界の天気</title>
+    <title>天気</title>
+    <link rel="stylesheet" href="project.css">
+    <script src="weather.js" defer></script>    
   </head>
   <body>
-    <table>
-        <tr>
-            <th></th>
-        </tr>
-    </table>
+   <h1>天気</h1>
+   <label for="list">場所 </label>
+   <br><input type="search" name="basho" size="10">
+    <button id="print">回答</button>
+   <table>
+    <tr>
+        <td></td>
+    </tr>
+   </table>
+   <p id="name1">場所</p>
+   <p id="temp_max1">最高気温</p>
+   <p id="temp_min1">最低気温</p>
   </body>
 </html>
