--- a/index.html
+++ b/index.html
@@ -40,5 +40,10 @@
       <li><a href ="practice-dom/dom-exercise.html">練習4-2から4-5:DOM プログラミング演習</a></li>
     </ul>
     <h3>第5回 イベント処理</h3>
+    <p>今回はjavascriptのイベント処理について学びました。ボタンのクリックで処理を実行などイベントの種類がたくさんあり、キーやマウスポインタで処理をするなど様々な要素を使ってイベント処理を行なった。また、inpput要素を使い、カラーやフォント、テキストなどの編集を行い、見やすくかつ見たいものだけを選択できるようなWebページの作成が可能となった。イベント処理のデバックでエラーも見つける事ができる。</p>
+    <ul>
+      <li><a href ="practice-event/event-intro.html">練習問題5-2</a></li>
+      <li><a href ="practice-event/event-list.html">練習問題5-3</a></li>
+    </ul>
   </body>
 </html>
