Webコンテンツの作成

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
     <p></p>
     <li><a href="project.html">プロジェクト課題</a></li>
     <h2>数当てゲーム</h2>
-    <p></p>
+    <p>「数当てゲームの説明」</p>
+    <li>乱数で 1〜10の値を1つ決めて、「答え」とする</li>
+    <li>ユーザは答えを予想して、数を最大で3回入力できる</li>
+    <li>ユーザの入力が外れた場合は，入力よりも答えが大きいか小さいか表示する</li>
+    <li>3回以内に答えの数を当てればユーザの勝ち、そうでなければ負け</li>
+    <li>ページには，テキストボックスとボタンが設置されている</li>
+    <ul>
+      <li>ユーザはテキストボックスに予想した数を入力</li>
+      <li>ボタンを押すと判定</li>
+    </ul>
     <li><a href = "kazuate.html">数当てゲーム</a></li>
     <h2>毎回の実験で作成したページ</h2>
     <h3>第1回 WWW HTML</h3>
@@ -31,16 +40,19 @@
     </ul>
     <h3>第3回 JavaScript の基本</h3>
     <p>今回はJavaScriptについて学びました。JavaとJavaScriptの違いやJavaSqriptを使って、宣言や代入、繰り返しを行い、数当てゲームを作成した。javaの宣言と少し違っており、プログラム作成が大変でした。メソッドやオブジェクト参照やエラーが詳しく理解する事ができ、とても便利でした。この日は熱が出てしまい、欠席してしまったがしっかりと理解できてよかった。</p>
+    <p>演習の成果</p>
     <ul>
       <li><a href ="practice-js/obj-practice.html">練習3-6:オブジェクトの参照</a></li>
     </ul>
     <h3>第4回 DOM と JavaScript</h3>
     <p>今回はDOMとJavaScriptについて学びました。DOMはイベント処理と組み合わせて使用することが多いです。DOMとイベント処理を組み合わせると次のようなページを作れます。DOMはイベント処理と組み合わせてDOMを使用することでDOMの実用性が実感できる。DOMを使ったプログラムを作るのは難しいです。プログラムエラーの原因は、JavaScriptプログラムだけではなくHTMLの場合もあります。</p>
+    <p>演習の成果</p>
     <ul>
       <li><a href ="practice-dom/dom-exercise.html">練習4-2から4-5:DOM プログラミング演習</a></li>
     </ul>
     <h3>第5回 イベント処理</h3>
     <p>今回はjavascriptのイベント処理について学びました。ボタンのクリックで処理を実行などイベントの種類がたくさんあり、キーやマウスポインタで処理をするなど様々な要素を使ってイベント処理を行なった。また、inpput要素を使い、カラーやフォント、テキストなどの編集を行い、見やすくかつ見たいものだけを選択できるようなWebページの作成が可能となった。イベント処理のデバックでエラーも見つける事ができる。</p>
+    <p>演習の成果</p>
     <ul>
       <li><a href ="practice-event/event-intro.html">練習問題5-2</a></li>
       <li><a href ="practice-event/event-list.html">練習問題5-3</a></li>
