--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>「Webコンテンツ作成」の成果</h1>
     <h2>本テーマの学習目的</h2>
-    <p>ここには学習目標を記録してください. シラバスや講義資料から読み取りましょう.（100文字）</p>
+    <p>ここには学習目標を記録してください. シラバスや講義資料から読み取りましょう。</p>
     <h2>プロジェクト課題について</h2>
     <p></p>
     <li><a href="project.html">プロジェクト課題</a></li>
