--- a/project.html
+++ b/project.html
@@ -2,22 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>天気</title>
+    <title>世界の天気</title>
     <link rel="stylesheet" href="project.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"></script>
     <script src="weather.js" defer></script>    
   </head>
   <body>
-   <h1>天気</h1>
-   <label for="list">場所 </label>
-   <br><input type="search" name="basho" size="10">
-    <button id="print">回答</button>
-   <table>
-    <tr>
-        <td></td>
-    </tr>
-   </table>
-   <p id="name1">場所</p>
-   <p id="temp_max1">最高気温</p>
-   <p id="temp_min1">最低気温</p>
+   <h1>世界の天気</h1>
+   <label for="list">IDを入力してね🔐</label>
+   <br><input type="search" name="id" size="10">
+   <button id="sendRequest">検索</button>
+   <p id="name"></p>
+   <p id="lon"></p>
+   <p id="lat"></p>
+   <p id="temp_min"></p>
+   <p id="temp_max"></p>
+   <p id="humidity"></p>
+   <p id="speed"></p>
+   <p id="deg"></p>
   </body>
 </html>
