プロジェクト課題

--- a/project.html
+++ b/project.html
@@ -12,13 +12,15 @@
    <label for="list">IDを入力してね🔐</label>
    <br><input type="search" name="id" size="10">
    <button id="sendRequest">検索</button>
-   <p id="name"></p>
-   <p id="lon"></p>
-   <p id="lat"></p>
-   <p id="temp_min"></p>
-   <p id="temp_max"></p>
-   <p id="humidity"></p>
-   <p id="speed"></p>
-   <p id="deg"></p>
+   <ul>
+    <li><p id="name"></p></li>
+    <li><p id="lon"></p></li>
+    <li><p id="lat"></p></li>
+    <li><p id="temp_min"></p></li>
+    <li><p id="temp_max"></p></li>
+    <li><p id="humidity"></p></li>
+    <li><p id="speed"></p></li>
+    <li><p id="deg"></p></li>
+  </ul>
   </body>
 </html>
