Webコンテンツ作成

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
       <li>HTML, CSS, JavaScript の構文リファレンスから，構文の書式や使用方法の情報を入手できる</li>
       <li>HTML, CSS, JavaScript, 画像・音声・動画ファイルを組み合わせて簡単な Web ページが作成できる</li>
     </ul>
+    <div id="div">
+    <div>
     <h2>プロジェクト課題について</h2>
     <p>WWWのサーバへ検索し、サーバから届いたデータを Webページとして整形するような Webアプリケーションを作成する。自分は世界の天気についてWebページの作成せました。全6回の講義を通じてプロジェクトを作成しました。第1回ではデータを選び、Webアプリケーションのページテンプレートの作成をし、第2回ではCSSについて学び、Webページの装飾をしました。テキストや背景をカラーしたり、フォントを変えたりしてデザインしました。第3回では、JavaScriptを学び、JSを使ってデータ項目全てをコンソールで出力できるようにプログラムを改良しました。第4回では、DOMとJavaScriptの勉強をし、プログラムに修正をし、div要素を入れ、コンソールに表示していたデータ項目をdiv要素に表示できるようにした。第5回はイベント処理について学び、inputやbotton要素を使い、検索欄を作りました。そして第6回でこのプロジェクト課題を完成させた。</p>
     <ul>
       <li><a href="project.html">プロジェクト課題</a></li>
     </ul>
+    </div>
+    <div>
     <h2>数当てゲーム</h2>
     <p>数当てゲームは1〜10で設定された数字を3回の予想で数字を当てるゲームです。3回以内に出れば、ユーザが勝ちで、そうでなければ負けになります。また、予想より大きいか小さいかも表示する。最初はコンソールに出力されるようにプログラムを作り、それをコンソールから表示されるようにプログラムを修正させ、プログラムを短縮化した。最後にボタンを作り、ボタンを押すと検索結果が出るようにプログラムを作成した。</p>
     <p>「数当てゲームの説明」</p>
@@ -37,7 +41,11 @@
     <ul>
       <li><a href = "kazuate.html">数当てゲーム</a></li>
     </ul>
+    </div>
+    </div>
     <h2>毎回の実験で作成したページ</h2>
+    <div id="zentai">
+    <div>
     <h3>第1回 WWW HTML</h3>
     <p>今回はWebコンテンツの作成のためのHTMLの文書や要素について学びました. また次の課題に取り組みました. 演習1-3ではHTMLの文書の作成の仕方を学び、演習1-4ではさまざまな要素を学び、Webコンテンツの作成をしました. Webページの構造を記述するための要素（p.strong.br.h.ul.liなど）や構成のための必要な文を理解する事ができた.</p>
     <p>演習の成果</p>
@@ -45,24 +53,32 @@
       <li><a href="practice-html/structure.html">演習1-3のHTMLファイル</a></li>
       <li><a href="practice-html/elements.html">演習1-4のHTMLファイル</a></li>
     </ul>
+    </div>
+    <div>
     <h3>第2回 CSS による Web ページの装飾</h3>
     <p>今回はCSSについて学びました。CSS（Cascading Style Sheets）とは、 Webサイトのサイズや色、レイアウトなどを設定 するためのプログラミング言語であり、CSSは「シーエスエス」や「スタイルシート」などと呼ばれており、背景の色の変更や画像の設置、文字のフォントや色などの幅広いデザインを定義する際に使用されている。CSSを利用してページを見やすく作成した。</p>
     <p>演習の成果</p>
     <ul>
       <li><a href="practice-css/browser-intro.html">演習2-3のHTMLファイル</a></li>
     </ul>
+    </div>
+    <div>
     <h3>第3回 JavaScript の基本</h3>
     <p>今回はJavaScriptについて学びました。JavaとJavaScriptの違いやJavaSqriptを使って、宣言や代入、繰り返しを行い、数当てゲームを作成した。javaの宣言と少し違っており、プログラム作成が大変でした。メソッドやオブジェクト参照やエラーが詳しく理解する事ができ、とても便利でした。この日は熱が出てしまい、欠席してしまったがしっかりと理解できてよかった。</p>
     <p>演習の成果</p>
     <ul>
       <li><a href ="practice-js/obj-practice.html">練習3-6:オブジェクトの参照</a></li>
     </ul>
+    </div>
+    <div>
     <h3>第4回 DOM と JavaScript</h3>
     <p>今回はDOMとJavaScriptについて学びました。DOMはイベント処理と組み合わせて使用することが多いです。DOMとイベント処理を組み合わせると次のようなページを作れます。DOMはイベント処理と組み合わせてDOMを使用することでDOMの実用性が実感できる。DOMを使ったプログラムを作るのは難しいです。プログラムエラーの原因は、JavaScriptプログラムだけではなくHTMLの場合もあります。</p>
     <p>演習の成果</p>
     <ul>
       <li><a href ="practice-dom/dom-exercise.html">練習4-2から4-5:DOM プログラミング演習</a></li>
     </ul>
+    </div>
+    <div>
     <h3>第5回 イベント処理</h3>
     <p>今回はjavascriptのイベント処理について学びました。ボタンのクリックで処理を実行などイベントの種類がたくさんあり、キーやマウスポインタで処理をするなど様々な要素を使ってイベント処理を行なった。また、inpput要素を使い、カラーやフォント、テキストなどの編集を行い、見やすくかつ見たいものだけを選択できるようなWebページの作成が可能となった。イベント処理のデバックでエラーも見つける事ができる。</p>
     <p>演習の成果</p>
@@ -70,7 +86,9 @@
       <li><a href ="practice-event/event-intro.html">練習問題5-2</a></li>
       <li><a href ="practice-event/event-list.html">練習問題5-3</a></li>
     </ul>
+    </div>
     <h2>工夫点、苦心点、強調点、感想</h2>
     <p>工夫点としては、プロジェクト課題の作成で検索欄に都市IDを打って検索ボタンを押すと、検索された都市の都市名、緯度、経度、最低気温、最高気温、湿度、風速、風向が表示されるようにした。また見出しを大きく作り、何の情報かわかりやすくし、ID欄を作り、都市IDをわかりやすくしました。また、Webコンテンツの方も少しカラーをつけておしゃれにしました。工夫をするときにCSSでデザインするのがとても楽しかった。背景には写真を入れ、Webをのぞいた時に見ている人に興味が出るようなWebページにしました。Webコンテンツの作成でも演習問題や説明文には、li要素でわかりやすく見やすく作ることができました。苦心点としては、自分はどれも苦戦したと思います。その中でもJavaScriptやDOMの部分がとても苦戦しました。コンソールになかなか表示されなかったり、JSとHTMLの要素合わせや、表示の仕方、要素が多くなってきてどうやって表示するのかすごく苦戦しました。しかし、講義資料のほかに参考資料など相談をし、一個づつしっかりと理解し、プロジェクト課題とWebコンテンツを作成することができた。WebコンテンツはHTMLとCSSで作成でしたが、プロジェクト課題はHTMLとJSとCSSで作成でしたのでJSの部分に苦戦しました。自分は検索IDを検索して表示だったのでなかなか表示されずとても悩みましたが、講義資料を見直したり、教えてもらったりして、表示できるようになった。また、強調点としては、Webコンテンツでは見出し・小見出しを作りWebページの題名とその中の分野の題名の大きさを変え、カラーをつけて、各カテゴリーの強調をした。プロジェクト課題の方は、まず何のことについてなのかをわかりやすく見出しを作り、カラーとその見出しを線で囲い、わかりやすく強調した。また、検索欄に何を入力すればいいのかわかりやすく、赤で強調した。最後に感想としては、初めてWebページを作ってみて、とても難しいと実感しました。その一方で、完成させるととても嬉しかったです。自分のページを作り、みんなの参考になるようなページを作れることはとても素晴らしいことなんだと思いました。プログラミングと重なり、ちょっと紛らわしい部分もあり、とても大変ではありましたがしっかりとWebコンテンツとプロジェクト課題について完成させることができてよかったです。いろんなWebページを見れてる裏ではこんなに沢山のデータやプログラムが書かれていると思うと作る人はとてもすごい技術を持っているんだなと思い、自分も将来そういった方たちになれるようにしっかりと知識を得ていこうと思いました。自分のWebページwp作るのはとても楽しかったです。</p>
+    </div>
   </body>
 </html>
