--- a/project.html
+++ b/project.html
@@ -9,9 +9,26 @@
   </head>
   <body>
    <h1>世界の天気</h1>
+   <h2>都市の名前、最低気温、最高気温</h2>
    <label for="list">IDを入力してね🔐</label>
    <br><input type="search" name="id" size="10">
    <button id="sendRequest">検索</button>
+   <div class="toshi">
+    <p>下の都市名を選んでください</p>
+    <p>カイロ:360630</p>
+    <p>モスクワ:524901</p>
+    <p>ヨハネスブルグ:993800</p>
+    <p>北京:1816670</p>
+    <p>東京:1850147</p>
+    <p>シンガポール:1880252</p>
+    <p>シドニー:2147714</p>
+    <p>ロンドン:2643743</p>
+    <p>パリ:2968815</p>
+    <p>リオデジャネイロ:3451189</p>
+    <p>ニューヨーク:5128581</p>
+    <p>ロサンゼルス:5368361</p>
+   </div>
+   <h3>
    <ul>
     <li><p id="name"></p></li>
     <li><p id="lon"></p></li>
@@ -21,6 +38,7 @@
     <li><p id="humidity"></p></li>
     <li><p id="speed"></p></li>
     <li><p id="deg"></p></li>
-  </ul>
+   </ul>
+   </h3>
   </body>
 </html>
